--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,10 @@
     <head>
         <!-- Meta -->
         <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
         <!-- Title -->
-        <title>Vk</title>
+        <title>ReactVK</title>
     </head>
 
     <body>
